# wtat

./: .env.example  .gitignore  README.md  docker.compose.yml  pyproject.toml
data/label-studio/: label_config.xml  tasks.json
data/label_studio/: label_config.xml  tasks.json
data/raw/: ForTest.xlsx  WARMAN 2023.xlsx  Warman - 2021 - ForTest.xlsx  Warman - 2021.xlsx  Warman - 2022.xlsx
dbt/: .gitignore  dbt_project.yml
dbt/models/intermediare/: int_data__advertiser.sql  int_data__desired.sql
dbt/models/marts/: bridge_advertiser_country.sql  bridge_desired_country.sql  diim_country.sql  dim_ads.sql  dim_advertiser.sql  dim_date.sql  dim_desired.sql  fact_ads.sql  schema.yml
dbt/models/staging/: _src_data.yml  stg_data__ads.sql  stg_data__profiles.sql  stg_date.sql
ingestion/: Cargo.toml  Dockerfile
ingestion/src/: lib.rs  main.rs  models.rs
notebooks/: eda.ipynb
orchestration/: config.py  constants.py  definitions.py
orchestration/adapters/: repository.py
orchestration/core/: special_rn.py  splitting.py
orchestration/defs/: resources.py
orchestration/defs/assets/: ads.py  label_studio.py  posts.py  profiles.py
orchestration/extractors/: sunday_rn.py
orchestration/helpers/: hash_utils.py
orchestration/helpers/llm/: evaluation.py
orchestration/helpers/profiles/: cleaning.py  transform.py
orchestration/label_studio/: converter.py
orchestration/llm/: hybrid_extractor.py  llm_service.py  models.py  prompts.py  prompts_v2.py  prompts_v3.py
orchestration/training/: train_ner_model.py
tests/: vllm-test.py
