[project]
name = "wtat_dagster"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.11",
    "dagster-duckdb>=0.27.11",
    "dagster-duckdb-pandas>=0.27.11",
    "dagster-openai>=0.27.11",
    "openai>=1.109.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "orchestration"
registry_modules = [
    "orchestration.components.*",
]


